# AugDoctor

./: Cargo.toml  LICENSE  README.md  biospectre.augmented_citizen.v1.json  errorityapplication.md  research-DATE-autonomy-manifest.json
.github/workflows/: neuromorph-ci.yml  validate-autonomy-manifest.yml
Config/CyberNano/: XRRetrieval.aln
aln/: autonomy.neuromorph.v1.aln  neurorights.kernel.v1.aln
aln-did-access/src/: lib.rs
aln/evolution/: per_turn_validation_manifest.aln
augdoctor-autonomy-core/src/: governor.rs  lib.rs  trace.rs
augdoctor-autonomy-core/tests/: semantic_parity.rs
augdoctor-companion-biomarkers/: Cargo.toml
augdoctor-companion-biomarkers/src/: governor.rs  lib.rs  neuralrope_helper.rs
augdoctor-neuromorph-core/src/: lib.rs
augdoctor-policies-bioscale/src/: evaluate_upgrade.rs
augdoctor-wordmath-core/src/: lib.rs  rights_header.rs
augdoctor_policies/src/: neural_rope_prompt_selector.rs  neuro_handshake_orchestrator.rs  shot_level_policy.rs
bci-bioledger-bridge/: Cargo.toml
bci-bioledger-bridge/src/: lib.rs  mapper.rs  orchestrator.rs  types.rs
bci-bioledger-service/: Cargo.toml
bci-bioledger-service/src/: main.rs  wasm.rs
bci-bioledger-service/src/examples/: orchestrator.js
bci-ledger-service/: Cargo.toml
bci-ledger-service/src/: civic_profile.rs  main.rs  security.rs  wasm.rs
biophysical-blockchain/: Cargo.toml
biophysical-blockchain/src/: access.rs  consensus.rs  cyberrank.rs  envelope_ctx.rs  evolution_guard.rs  evolution_karmadecay.rs  inner_ledger.rs  lib.rs  lifeforce.rs  morph.rs  nano_observation.rs  nano_router.rs  power.rs  sealed.rs  turns.rs  types.rs
biophysical-blockchain/src/discipline/: evolution_turn.rs  programmatic.rs
biophysical-blockchain/src/evolution/: defensive_mutation_pipeline.rs  karma_decay.rs
biophysical-blockchain/src/evolve/: reward.rs
biophysical-blockchain/src/fear_mode/: consent.rs  kernel.rs  reward_eligibility.rs  rollback.rs  spectral_energy.rs
biophysical-blockchain/src/lifeforce/: radiology_lifeforce.rs
biophysical-blockchain/src/nano/: observation_radiology.rs
biophysical-blockchain/src/safety/: mutation_guard.rs
biophysical-blockchain/src/sovereignty/: roh.rs
biophysical-corridor-mutation/: Cargo.toml
biophysical-corridor-mutation/src/: corridor.rs  gates.rs  lib.rs  sealed.rs
biophysical-reward-integrity-guard/src/: lib.rs  main.rs
biophysical-reward-integrity-guard/wasm/: bindings.js
bioscale_upgrade_service/: Cargo.toml
bioscale_upgrade_service/src/: main.rs  neural_rope.rs  wasm.rs
bioscale_upgrade_store/: Cargo.toml
bioscale_upgrade_store/src/: lib.rs  types.rs
bioscale_upgrade_store/src/bioscale/: mod.rs  upgrade_asset.rs  upgrade_store.rs
biospectre-core/src/: nano_donation_router_v2.rs
ci/: README.md
ci/pipelines/: daily-bci.yaml  daily-nanoswarm.yaml  daily-neuro.yaml  daily-smartcity.yaml
civic-analytics/src/: civic_classifier.rs
crates/aln-core/: Cargo.toml
crates/aln-ledger/: Cargo.toml
crates/bci-guards/: Cargo.toml
crates/biophysical_access_guard/: Cargo.toml
crates/biophysical_access_guard/src/: lib.rs
crates/nanoswarm-guards/: Cargo.toml
crates/neuromorphic-guards/: Cargo.toml
crates/prometheus-bridge/: Cargo.toml
crates/quantum_cons_net/: Cargo.toml
crates/quantum_cons_net/src/: lib.rs
crates/smartcity-swarm-guards/: Cargo.toml
crates/smartcity-swarm-guards/src/: envelope.rs  lib.rs  manifest.rs  tests.rs
cybokinetics/: fearModeReward.js
data/aln_manifests/: dow_manifest.json
eeg-schema-v1/src/: pain_corridor_from_eeg.rs
evolution/src/: karma_decay.rs
formal/: RoHDonutLoop.v  RoHDonutLoopMinimal.tla
host-bioledger/src/: main.rs  metabolic_drops_view.rs
host-bridge/: corridorProfileBridge.js
host-node/src/: oracle_power.rs  orchestrator.rs  rpc_rights_submit.rs
js/: access_guard_shard_formatter.js  ai_chat_proxy.js  aln_wasm_autonomous_loader.js  augdoctor_bridge.js  augdoctor_policies.js  eeg_feature_header_v1.js  eeg_feature_schema.js  eeg_neural_rope_prompt.js  neuromorphSidecar.js  quantum_net_proxy.js  sanity-bridge-client.js
js/augdoctor-autonomy-core/: index.js
js/augdoctor-neuromorph/: index.js
js/augdoctor-power/: oracle.js
js/augdoctor-rights/: index.js  rpcClient.js
js/augdoctor-wordmath/: index.js
js/morph-power/: morphPower.js
js/organic-cpu-scheduler/: index.js
kernels/: example_viability_kernel.yaml
manifests/: research2026-01-30-bci.aln  research2026-01-30-nanoswarm.aln  research2026-01-30-neuro.aln  research2026-01-30-smartcity.aln
morph-power-core/src/: invariants.rs  lib.rs  power_guard.rs  types.rs
nanoswarm-sim/src/: paincorridor_sim.rs
neural-roping/src/: pain_corridor.rs
neural_roping/src/: eeg_few_shot_prompt.rs  eeg_json_tokenizer.rs  eeg_json_tokenizer_v1.rs  eeg_trace_recorder.rs
neuromorph-controller/src/: blood_wave_gate.rs
neuromorph-reflex-sense/src/: lib.rs
neuromorph/src/: domain.rs  evolution_gate.rs  metabolic_drops_view.rs  observation.rs  orchestrator.rs  policy_basic.rs
orchestration/: plane_aware_swarm.pseudo.js
orchestration/src/: bci_full_path.rs
organ-chip-bridge/src/: chip_pain_bindings.rs
organiccpu_tsafe_harness/src/: kernel_spec.rs  main.rs  run.rs
organiccpu_tsafe_harness/tests/: basic.rs
policies/: evolve_bounds.host-local.json
policyengines/src/: reversalconditions.rs
qpudata/shards/: power-governance-profile.aln
qpudatashards/: host-rights-travel-us-maricopa.aln  sovereign-fear-consent.aln
qpudatashards/particles/: access_guard_shard.rs  biophysical_access_policy.aln  biophysical_innerledger_profile.aln  evolution-emergency-audit-profilev1.aln  evolution-emergency-audit-turnv1.aln  evolution-emergency-rights.aln  morph-budget-profile.aln  morph-ledger.aln  (+4 more)
research/: 2026-01-31-research_manifest.aln  research_goals.neuromorph-eco-aura.aln
schemas/: augdoctor.autonomy.trace.json  autonomy-trace.v1.json
src/: aln_autonomous_daemon.rs  deepbrain_invariants.rs  deepbrain_runtime.rs  inner_ledger.rs  main.rs  types.rs  types_deepbrain.rs
xr-lab-grid/: Cargo.toml
(+103 files in other folders)
