[workspace]
members = [
    "crates/aln-core",
    "crates/bci-guards",
    "crates/nanoswarm-guards",
    "crates/neuromorphic-guards",
    "crates/smartcity-swarm-guards",
    "crates/prometheus-bridge",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Home-Repo ALN Swarm Loop"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
prometheus = "0.13"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
