[package]
name = "bci-bioledger-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP/WASM shell for BCI → biophysical-blockchain safety service."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
hyper = { version = "1.2", features = ["http1", "server"] }
http-body-util = "0.1"
bytes = "1.6"

bci-bioledger-bridge = { path = "../bci-bioledger-bridge" }
biophysical-blockchain = { path = "../biophysical-blockchain" }
bioscaleupgradeservice = { path = "../bioscaleupgradeservice" }
augdoctorpolicies = { path = "../augdoctorpolicies" }

[features]
wasm = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
features = ["serde-serialize"]
