[package]
name = "bci-ledger-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Secure BCI/EEG → biophysical-ledger microservice with civic reward routing and WASM bindings."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
hyper = { version = "1.2", features = ["http1", "server"] }
http-body-util = "0.1"
bytes = "1.6"
uuid = { version = "1.7", features = ["v4"] }

biophysical-blockchain = { path = "../biophysical-blockchain" }
bci-bioledger-bridge = { path = "../bci-bioledger-bridge" }
bioscaleupgradeservice = { path = "../bioscaleupgradeservice" }
augdoctorpolicies = { path = "../augdoctorpolicies" }

wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]
default = []
